# odf_toolbox

./: .gitignore  CTD_2000037_102_1_DN.ODF  CTD_SCD2022277_001_01_DN.ODF  CTD_SCD2022277_002_01_DN.ODF  MCM_HUD2010014_1771_1039_3600.ODF  MCTD_GRP2019001_2104_11689_1800.ODF  README.md  pyproject.toml
src/odf_oracle/: __init__.py  compass_cal_to_oracle.py  cruise_event_to_oracle.py  data_to_oracle.py  event_comments_to_oracle.py  general_cal_comments_to_oracle.py  general_cal_equation_to_oracle.py  general_cal_to_oracle.py  history_to_oracle.py  instrument_to_oracle.py  load_files_to_odf_archive_db.py  meteo_comments_to_oracle.py  meteo_to_oracle.py  odf_to_oracle.py  polynomial_cal_to_oracle.py  quality_comments_to_oracle.py  quality_tests_to_oracle.py  quality_to_oracle.py  sytm_to_timestamp.py
src/odf_toolbox/: MCM_HUD2010014_1771_1039_3600.ODF  __init__.py  basehdr.py  compare_seabird_xmlcons.py  compasshdr.py  create_parameters_database.py  cruisehdr.py  eventhdr.py  generalhdr.py  generate_metadata_report.py  gf3defs_sorted.csv  historyhdr.py  instrumenthdr.py  listhandler.py  lookup_parameter.py  metadata_report.py  meteohdr.py  mtrhdr.py  multinet.py  netcdfhdr.py  odfUtils.py  odfhdr.py  odflogger.py  odfutils - Copy.py  odfutils.py  parameterhdr.py  parameters_from_excel_to_dataframe.py  polynomialhdr.py  qualityhdr.py  recordhdr.py  records.py  remove_parameter.py  test.py  test2.py  thermograph.py
tests/: CTD_2000037_102_1_DN.ODF  CTD_91001_001_01_DN.ODF  CTD_SCD2022277_002_01_DN.ODF  test_odf_class.py  update_91001.py  update_HUD2014030.py
tests/ODF/: CTD_BCD2024669_001_01_DN.ODF
tests/Step_1_Update_Metadata/: CTD_91001_001_01_DN.ODF  CTD_91001_001_01_UP.ODF  (+4 more)
tests_output/: CTD_BCD2024669_001_01_DN.ODF
(+2 files in other folders)
