[project]
name = "odf_toolbox"
version = "0.9.0"
description = "Toolbox for working with Open Document Format (ODF) files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "icecream>=2.1.4",
    "netcdf4>=1.7.2",
    "openpyxl>=3.1.5",
    "oracledb>=3.0.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
]
